--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -88,7 +88,7 @@ opt:
 
 pipeline:
   convert_SHs_python: true
-  compute_cov3D_python: false
+  compute_cov3D_python: true
   debug: false
 
   pose_noise: 0.1
